--- a/parvularia/Stilo.css
+++ b/parvularia/Stilo.css
@@ -1,21 +1,22 @@
+/* Estilos Generales */
 * {
     list-style: none;
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
+/* Estilos para el Body */
 body {
-    height: 145vh;
-
+    min-height: 100vh;
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
 
+/* Estilos del Header */
 header {
     width: 100%;
     position: fixed;
@@ -24,18 +25,14 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left:5%;
-    padding-right: 5%;
-    height: 100px;
+    padding: 0 5%;
+    height: 80px;
     background-color: #380D06;
     z-index: 1000;
-    
 }
-
 
 .logo {
     height: auto;
-    
 }
 
 .menu {
@@ -43,24 +40,23 @@ header {
     justify-content: center;
     align-items: center;
 }
-.item>a
-{
+
+.item > a {
     text-decoration: none;
     color: white;
 }
-.item>a:hover
-{
+
+.item > a:hover {
     text-decoration: none;
     color: #ff2258;
 }
+
 .item {
     margin: 0 15px;
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
     color: #f2f2f2;
-    margin-right: 1em; 
-    
 }
 
 .item:hover {
@@ -69,12 +65,10 @@ header {
 
 #menu {
     display: none;
-    
 }
 
 .menu-icono {
     width: 25px;
-   
 }
 
 label {
@@ -82,14 +76,21 @@ label {
     display: none;
     margin-left: 5em;
 }
+
+/* Ajustes para pantallas menores a 991px */
 @media (max-width: 991px) {
+    header {
+        padding: 0 3%;
+    }
+
     .menu {
+        flex-direction: column;
         padding: 30px;
         margin: 0;
     }
 
     label {
-        display: initial;
+        display: block;
     }
 
     .menu {
@@ -102,371 +103,114 @@ label {
     }
 
     .item {
-        margin: 0 0 20px 0;
+        margin: 20px 0;
         width: 100%;
+        text-align: center;
     }
 
-  
-
     #menu:checked ~ .menu {
-        display: initial;
+        display: block;
     }    
-
 }
 
-
-nav{ 
+/* Estilos del Nav */
+nav {
     max-width: 100%;
     margin: auto;
     background-color: #29030e;
-    font-size: 20px;
-    margin-top: 100px;
+    font-size: 18px;
+    margin-top: 80px;
     overflow: hidden;
 }
-.menu-horizontal{
+
+.menu-horizontal {
     list-style: none;
     display: flex;
     justify-content: space-around;
 }
-.menu-horizontal > li > a{
+
+.menu-horizontal > li > a {
     display: block;
     padding: 15px 20px;
     color: #e7e9f3;
     text-decoration: none;
 }
-.menu-horizontal > li:hover{
-    background-color:red ;
+
+.menu-horizontal > li:hover {
+    background-color: red;
 }
-.menu-vertical{
+
+.menu-vertical {
     position: absolute;
     display: none;
     list-style: none;
     width: 200px;
-    background-color: rgb(243, 225, 225);
+    background-color: #29030e;
 }
-/*color de fondo*/
-.menu-horizontal li:hover .menu-vertical{
+
+.menu-horizontal li:hover .menu-vertical {
     display: block;
-    background-color:#29030e;
-}
-/*color de fondo letras*/
-
-
-/* .menu-vertical li:hover{
-    background-color: rgb(255, 251, 0);
-    
-    ¡¡POR SI ACASO!!
-} */
-
-
-
-.menu-vertical  > li > a:hover {
-    background-color: yellow; /* Cambia el color de fondo al pasar el ratón */
-    color: #000000; /* Cambia el color de texto al pasar el ratón */
-}
-/*color de las letras*/
-.menu-vertical li a{
-    display: block;
-    color: rgb(255, 255, 255);
-    padding: 15px 15px 15px 20px;
-    text-decoration: none;
 }
 
-.contenedor img{
-    width: 100%;
-    height: auto; 
-    padding: 1%;
-}
-.contenedor p{
-    width: 100%;
-    height: auto; 
-    padding: 2%;
-    color: white;
-    background-color: #29030e;
-    font-size: 20px;
-    border-radius: 8px;
-}
-.main2 {
-    background:  #bd0003;
-    width: 100%;
-    height: auto;
-    display: flex;
-    padding: 6px;  
+/* Ajuste de fuentes y espacios en pantallas pequeñas */
+@media (max-width: 768px) {
+    .item {
+        font-size: 16px;
+    }
+
+    .contenedor p,
+    .titutlopar > p,
+    .titutlopar2 > p {
+        font-size: 18px;
+    }
+
+    .noticia {
+        width: calc(50% - 20px);
+    }
 }
 
-.titulorojo{
-    background-color: #bd0003;
-    color: yellow; 
-    margin: 1%;
-    text-align: center;
-}
-.imagenpar{
-    display: flex;
-    padding: 6px;  
-    width: 100%;
-    height: auto;
-}
-.imagenpar img{
-    display: flex;
-    padding: 6px;  
-    width: 50%;
-    height: auto;
-}
-.titutlopar>p{
-    padding-left: 1%;
-    color: white;
-    font-size: 25px;
-   
-}
-.titutlopar>h1{
-    padding-left: 1%;
-    color: yellow;
-    text-align: center;
+@media (max-width: 576px) {
+    .item {
+        font-size: 14px;
+    }
 
+    .contenedor img {
+        padding: 5%;
+    }
+
+    .noticia {
+        width: 100%;
+    }
+
+    .imagenpar img {
+        width: 100%;
+    }
+
+    .imagenpar2 img {
+        width: 100%;
+    }
+
+    .duraciona {
+        width: 100%;
+        margin: 20px auto;
+    }
 }
-.noticias-destacadas {
-    display: flex;
+
+/* Footer */
+.footer {
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px auto;
-    background: rgb(209, 209, 209);
-    width: 100%;
-    height: auto;
-    
-}
-.titulonoticia{  
-    background-color:#29030e;
-    text-align: center; /* Centra el contenido del div horizontalmente */
-    margin: 0 auto; /* Centra el div en la página */
-    width: 100%; /* Establece el ancho del div */
-    margin: 10px;
-    color: white;   
-}
-.contenedornoticia{
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-   
-}
-.noticia {
-    width: calc(33.33% - 20px);
-    margin-bottom: 20px;
-    background-color: #929090;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
-.noticia img {
+#izquierda,
+#derecha {
     width: 100%;
-    height: auto;
-    border-bottom: 1px solid #ddd;
-}
-.main3 {
-    background: white;
-    width: 100%;
-    height: auto;
-}
-
-.titulonoticia2 {
-    background-color: #8b8687;
     text-align: center;
-    margin: 10px auto; /* Se cambió la propiedad margin por margin-top y margin-bottom */
-    width: 100%;
-    color: #29030e;
-}
-
-.imagenpar2 {
-    display: flex;
-    justify-content: center; /* Se cambió padding por justify-content */
-    width: 100%;
-    height: auto;
-    margin: 20px auto; /* Se cambió la propiedad margin por margin-top y margin-bottom */
-}
-
-.imagenpar2 img {
-    width: 50%;
-    height: auto;
-}
-
-.titutlopar2 > h1 {
-    padding-left: 1%;
-    color: orange;
-    background-color: white;
-    margin: 1%;
-    text-align: center;
-}
-.titutlopar2 > p {
-    padding-left: 1%;
-    color: black;
-    font-size: 30px;
-    margin: 20px ;
-   
-}
-.duraciona{
-    background-color: #d56d04;
-    width: 390px;
-    height: 100px;
-    padding-top: 35px;
-    padding-left: 30px;
-    margin: 110px;
-    color: white;
-}
-.main4 img{
-    width: 100%;
-    height: auto;
-}
-.asignaturas{
-    background-color: #29030e;
-    text-align: center; /* Centra el contenido del div horizontalmente */
-    margin: 0 auto; /* Centra el div en la página */
-    color: white;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.main5 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px auto;
-   
-}
-.tituloventaja{
-    background-color: #29030e;
-    text-align: center;
-    margin: 10px auto; /* Se cambió la propiedad margin por margin-top y margin-bottom */
-    width: 100%;
-    color: white;
-}
-
-.ventajasmain{
-   
-
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.noticia {
-    width: calc(33.33% - 20px);
-    margin-bottom: 20px;
-    background-color: #999895;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.noticia img {
-    width: 100%;
-    height: auto;
-    border-bottom: 1px solid #ddd;
-}
-
-.noticia h2 {
-    font-size: 1.5rem;
     padding: 10px;
 }
 
-.noticia p {
-    padding: 10px;
-    color: black;
+#izquierda a,
+#derecha a {
+    padding-left: 0;
+    justify-content: center;
 }
-
-.footer{
-    display: flex;   
-    background: linear-gradient(20deg, #380D06, #6D120F, #A5241B, #E23D34);
-    width: 100%;
-    height: auto;
-}
-.footer,#izquierda{
-    font-size: 1.2vw;  
-}
-#izquierda a {
-    display: flex;
-    align-items: center;
-    text-decoration: none; /* opcional: quita el subrayado de los enlaces */
-    margin-bottom: 2px; /* opcional: añade un espacio entre cada enlace */
-    padding-left: 30%;
-  }
-  
-  #izquierda a i {
-    margin-right: 10px; /* opcional: añade espacio entre el icono y el texto */
-  }
-  
-  #izquierda p {
-    margin: 0; /* opcional: quita el espacio alrededor del párrafo */
-  }
-  #derecha a {
-    display: flex;
-    align-items: center;
-    text-decoration: none; /* opcional: quita el subrayado de los enlaces */
-    margin-bottom: 2px; /* opcional: añade un espacio entre cada enlace */
-    padding-left: 30%;
-  }
-  
-  #derecha a i {
-    margin-right: 10px; /* opcional: añade espacio entre el icono y el texto */
-  }
-  
-  #derecha p {
-    margin: 0; /* opcional: quita el espacio alrededor del párrafo */
-  }
-
-  .footer p, #izquierda strong {
-    font-size: 1.2vw;   
-}
-.footer p, #derechas strong {
-    font-size: 1.2vw;   
-}
-.button {
-    text-decoration: none;
-    color: #F7BF10;
-}
-
-#izquierda{
-    
-    width: 50%;
-    height: auto;
-    text-align: center;
-    padding-bottom: 2em;
-}
-#derecha{   
-    width: 70%;
-    height: auto;
-    text-align: center;
-    padding-bottom: 2em;
-}
-
-.facebook{
-    color: rgb(226, 230, 2);
-   font-size: 30px;
-    
-}
-
-.whatsapp{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-    
-}
-.instagram{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-}
-.tiktok{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-}
-.ubicacion{
-    color:rgb(226, 230, 2);
-    font-size: 30px;
-}
-.copi {
-    color: #000000; /* Cambia el color del texto */
-    font-size: 20px; /* Cambia el tamaño del texto */
-    text-align: center; /* Centra el texto */
-    font-family: Arial, Helvetica, sans-serif;
-  }
