--- a/Stilo.css
+++ b/Stilo.css
@@ -1,19 +1,17 @@
 * {
     list-style: none;
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
 body {
     height: 145vh;
-
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
 
 header {
@@ -24,19 +22,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left:5%;
+    padding-left: 5%;
     padding-right: 5%;
     height: 100px;
     background-color: #380D06;
     z-index: 1000;
-    
 }
-
 
 .logo {
     height: auto;
-    
-
 }
 
 .menu {
@@ -44,38 +38,30 @@ header {
     justify-content: center;
     align-items: center;
 }
-.item>a
-{
+
+.item > a {
     text-decoration: none;
     color: white;
 }
-.item>a:hover
-{
-    text-decoration: none;
+
+.item > a:hover {
     color: #ff2258;
 }
+
 .item {
     margin: 0 15px;
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
-    color: #f2f2f2;
-    margin-right: 1em; 
-    
-}
-
-.item:hover {
-    color: #ff2258;
+    margin-right: 1em;
 }
 
 #menu {
     display: none;
-    
 }
 
 .menu-icono {
     width: 25px;
-   
 }
 
 label {
@@ -83,6 +69,7 @@ label {
     display: none;
     margin-left: 5em;
 }
+
 @media (max-width: 991px) {
     .menu {
         padding: 30px;
@@ -107,15 +94,12 @@ label {
         width: 100%;
     }
 
-  
-
     #menu:checked ~ .menu {
         display: initial;
-    }    
-
+    }
 }
 
-nav{ 
+nav { 
     max-width: 100%;
     margin: auto;
     background-color: #29030e;
@@ -123,69 +107,62 @@ nav{
     margin-top: 100px;
     overflow: hidden;
 }
-.menu-horizontal{
+
+.menu-horizontal {
     list-style: none;
     display: flex;
     justify-content: space-around;
 }
-.menu-horizontal > li > a{
+
+.menu-horizontal > li > a {
     display: block;
     padding: 15px 20px;
     color: #e7e9f3;
-     
     text-decoration: none;
-    
 }
-.menu-horizontal > li:hover{
-    background-color:red ;
+
+.menu-horizontal > li:hover {
+    background-color: red;
 }
-.menu-vertical{
+
+.menu-vertical {
     position: absolute;
     display: none;
     list-style: none;
     width: 200px;
     background-color: rgb(243, 225, 225);
 }
-/*color de fondo*/
-.menu-horizontal li:hover .menu-vertical{
+
+.menu-horizontal li:hover .menu-vertical {
     display: block;
-    background-color:#29030e;
+    background-color: #29030e;
 }
-/*color de fondo letras*/
 
-
-/* .menu-vertical li:hover{
-    background-color: rgb(255, 251, 0);
-    
-    ¡¡POR SI ACASO!!
-} */
-
-
-
-.menu-vertical  > li > a:hover {
-    background-color: yellow; /* Cambia el color de fondo al pasar el ratón */
-    color: #000000; /* Cambia el color de texto al pasar el ratón */
+.menu-vertical > li > a:hover {
+    background-color: yellow;
+    color: #000000;
 }
-/*color de las letras*/
-.menu-vertical li a{
+
+.menu-vertical li a {
     display: block;
     color: rgb(255, 255, 255);
     padding: 15px 15px 15px 20px;
     text-decoration: none;
 }
+
 .main {
     background: #f6f7f4;
     width: 100%;
     height: auto;
     display: flex;
     padding-top: 1%;
-    justify-content: center; /* Centra el contenido horizontalmente */
+    justify-content: center;
 }
 
 .slider-frame {
-    width: 80%; /* Ajusta el ancho del slider según lo necesites */
-    max-width: 800px; /* Establece un ancho máximo para el slider */
-    margin: 0 auto; /* Centra el slider horizontalmente */
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
     overflow: hidden;
     padding: 0;
 }
@@ -194,123 +171,69 @@ nav{
     display: flex;
     padding: 0;
     width: 400%;
-    animation: slide 16s infinite alternate ease-in-out;
+    animation: slide 10s infinite;
 }
 
-.slider-frame li {
+.slider-frame ul li {
+    width: 100%;
     list-style: none;
-    width: 25%;
 }
 
-.slider-frame img {
-    width: 100%; /* Las imágenes ocuparán el 100% del ancho del li */
-    height: auto; /* Mantiene la proporción de aspecto original */
-    object-fit: cover; /* Ajusta la imagen para cubrir el área del contenedor */
+.slider-frame ul li img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
 @keyframes slide {
-    0% { margin-left: 0; }
-    20% { margin-left: 0; }
-    25% { margin-left: -100%; }
-    45% { margin-left: -100%; }
-    50% { margin-left: -200%; }
-    70% { margin-left: -200%; }
-    75% { margin-left: -300%; }
-    95% { margin-left: -300%; }
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    75% {margin-left: -300%;}
+    95% {margin-left: -300%;}
+    100% {margin-left: 0;}
 }
 
-
-.footer{
-    display: flex;   
+.footer {
+    display: flex;
+    flex-wrap: wrap;
     background: linear-gradient(20deg, #380D06, #6D120F, #A5241B, #E23D34);
     width: 100%;
-    height: auto;
-}
-.footer,#izquierda{
-    font-size: 1.2vw;  
-}
-#izquierda a {
-    display: flex;
-    align-items: center;
-    text-decoration: none; /* opcional: quita el subrayado de los enlaces */
-    margin-bottom: 2px; /* opcional: añade un espacio entre cada enlace */
-    padding-left: 30%;
-  }
-  
-  #izquierda a i {
-    margin-right: 10px; /* opcional: añade espacio entre el icono y el texto */
-  }
-  
-  #izquierda p {
-    margin: 0; /* opcional: quita el espacio alrededor del párrafo */
-  }
-  #derecha a {
-    display: flex;
-    align-items: center;
-    text-decoration: none; /* opcional: quita el subrayado de los enlaces */
-    margin-bottom: 2px; /* opcional: añade un espacio entre cada enlace */
-    padding-left: 30%;
-  }
-  
-  #derecha a i {
-    margin-right: 10px; /* opcional: añade espacio entre el icono y el texto */
-  }
-  
-  #derecha p {
-    margin: 0; /* opcional: quita el espacio alrededor del párrafo */
-  }
-
-  .footer p, #izquierda strong {
-    font-size: 1.2vw;   
-}
-.footer p, #derechas strong {
-    font-size: 1.2vw;   
-}
-.button {
-    text-decoration: none;
-    color: #F7BF10;
+    padding: 20px;
 }
 
-#izquierda{
-    
+#izquierda, #derecha {
     width: 50%;
-    height: auto;
+    margin-bottom: 20px;
     text-align: center;
-    padding-bottom: 2em;
-}
-#derecha{   
-    width: 70%;
-    height: auto;
-    text-align: center;
-    padding-bottom: 2em;
 }
 
-.facebook{
-    color: rgb(226, 230, 2);
-   font-size: 30px;
-    
+#izquierda a, #derecha a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
 }
 
-.whatsapp{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-    
+#izquierda i, #derecha i {
+    font-size: 25px;
+    color: white;
+    padding-right: 10px;
 }
-.instagram{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
+
+@media screen and (max-width: 700px) {
+    #izquierda, #derecha {
+        width: 100%;
+    }
 }
-.tiktok{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-}
-.ubicacion{
-    color: rgb(226, 230, 2);
-    font-size: 30px;
-}
+
 .copi {
-    color: #000000; /* Cambia el color del texto */
-    font-size: 20px; /* Cambia el tamaño del texto */
-    text-align: center; /* Centra el texto */
-    font-family: Arial, Helvetica, sans-serif;
-  }
+    background: #000000;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+}
