--- a/quienes_somos/pagina1.css
+++ b/quienes_somos/pagina1.css
@@ -29,6 +29,7 @@ header {
 header .logo {
     max-width: 120px; /* Reduce el tamaño del logo */
     height: auto;
+    display: block; /* Asegura que el logo se mantenga en la parte superior izquierda */
 }
 
 /* Estilos para el menú */
@@ -61,18 +62,15 @@ header .logo {
     display: none; /* Ocultamos el icono por defecto */
 }
 
-#menu {
-    display: none; /* Menú oculto por defecto */
-}
-
-/* Estilos para el menú desplegable */
+/* Menú desplegable en dispositivos móviles */
 .menu-vertical {
     list-style: none;
-    background-color: #29030e; /* Color de fondo del menú desplegable */
+    background-color: #003366; /* Fondo azul para el menú desplegable */
     position: absolute;
-    top: 100%;
+    top: 60px; /* Ajusta la posición para que quede justo debajo del header */
     right: 0;
     display: none; /* Ocultamos el menú desplegable por defecto */
+    width: 200px; /* Ajusta el ancho del menú desplegable */
 }
 
 .menu-vertical li {
@@ -81,7 +79,7 @@ header .logo {
 
 .menu-vertical a {
     padding: 1rem;
-    color: #fff;
+    color: white; /* Letras blancas en el menú desplegable */
     text-decoration: none;
     display: block;
 }
@@ -91,10 +89,6 @@ header .logo {
 }
 
 /* Mostrar menú en dispositivos móviles */
-#menu:checked ~ .menu {
-    display: block;
-}
-
 #menu:checked ~ .menu-vertical {
     display: block;
 }
